--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <Junit.version>4.13.2</Junit.version>
+        <assertJ.version>3.8.0</assertJ.version>
+        <LogBack.version>1.5.6</LogBack.version>
+        <lombok.version>1.18.32</lombok.version>
     </properties>
 
 </project>
